# time_tracking_app

./: CMakeLists.txt  README.md  main.cpp
include/: authentication.h  cli.h  dashboard.h  project.h  reporting.h  task.h  time_tracking.h
src/: authentication.cpp  cli.cpp  dashboard.cpp  project.cpp  reporting.cpp  task.cpp  time_tracking.cpp
